feat: add windows build

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,11 @@ rgb = { version = "0.8", features = ["serde"] }
 thiserror = "1.0"
 clap = { version = "4", features = ["derive", "cargo"] }
 sfml = "0.19"
+env_logger = "0.10"
+log = "0.4"
+#[cfg(target_os="linux")]
+x11rb = { version = "0.11", features = ["xinerama", "randr"]}
+#[cfg(target_os="windows")]
+windows = { version = "0.43.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi"] }
+cfg-if = "1"
+dyn-clone = "1"
