--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,15 @@ thiserror = "1.0"
 clap = { version = "4", features = ["derive", "cargo"] }
 # sfml = { path="./rust-sfml" }
 sfml = {git="https://github.com/donicrosby/rust-sfml.git", branch="fix/build-rs-uses-default-toolchain"}
-env_logger = "0.10"
 log = "0.4"
-#[cfg(target_os="linux")]
-x11rb = { version = "0.11", features = ["xinerama", "randr"]}
-#[cfg(target_os="windows")]
-windows = { version = "0.43.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi"] }
 cfg-if = "1"
 dyn-clone = "1"
+
+[target.'cfg(all(unix, target_os = "linux"))'.dependencies]
+x11rb = { version = "0.11", features = ["xinerama", "randr"]}
+env_logger = "0.10"
+
+[target.'cfg(all(windows, target_os = "windows"))'.dependencies]
+windows = { version = "0.43.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi"] }
+
+
