--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "ptuber"
 version = "0.1.0"
 edition = "2021"
 description = "A Rust implementation of a simplified VTuber rigging software"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -17,10 +18,11 @@ sfml = {git="https://github.com/donicrosby/rust-sfml.git", branch="fix/build-rs-
 log = "0.4"
 cfg-if = "1"
 dyn-clone = "1"
+env_logger = "0.10"
 
 [target.'cfg(all(unix, target_os = "linux"))'.dependencies]
 x11rb = { version = "0.11", features = ["xinerama", "randr"]}
-env_logger = "0.10"
+
 
 [target.'cfg(all(windows, target_os = "windows"))'.dependencies]
 windows = { version = "0.43.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi"] }
