--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ description = "A Rust implementation of a simplified VTuber rigging software"
 serde_yaml = "0.9"
 serde = { version = "1", features = ["derive"] }
 rgb = { version = "0.8", features = ["serde"] }
-thiserror = "1.0"
+thiserror = "1.0.37"
 clap = { version = "4", features = ["derive", "cargo"] }
 # sfml = { path="./rust-sfml" }
 sfml = {git="https://github.com/donicrosby/rust-sfml.git", branch="static-build", features=["serde"]}
@@ -18,7 +18,7 @@ log = "0.4"
 cfg-if = "1"
 dyn-clone = "1"
 env_logger = "0.10"
-rdev = "0.5"
+device_query = "1"
 
 
 
