--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ dyn-clone = "1"
 env_logger = "0.10"
 device_query = "1"
 either = { version = "1", features = ["serde"] }
+rust-embed = { version = "6.4.2", features = ["include-exclude"] }
 
 
 [target.'cfg(all(unix, target_os = "linux"))'.dependencies]
