--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,8 @@ description = "A Rust implementation of a simplified VTuber rigging software"
 toml = "0.5"
 derive_more = "0.99"
 serde = { version = "1", features = ["derive"] }
-# rgb = { version = "0.8", features = ["serde"] }
 thiserror = "1.0.37"
 clap = { version = "4", features = ["derive", "cargo"] }
-# sfml = { path="./rust-sfml" }
 sfml = {git="https://github.com/donicrosby/rust-sfml.git", branch="static-build", features=["serde"]}
 log = "0.4"
 cfg-if = "1"
@@ -21,7 +19,7 @@ dyn-clone = "1"
 env_logger = "0.10"
 device_query = "1"
 either = { version = "1", features = ["serde"] }
-rust-embed = { version = "6.4.2", features = ["include-exclude"] }
+rust-embed = { version = "6.4", features = ["include-exclude"] }
 
 
 [target.'cfg(all(unix, target_os = "linux"))'.dependencies]
@@ -29,6 +27,6 @@ x11rb = { version = "0.11", features = ["xinerama", "randr"]}
 
 
 [target.'cfg(all(windows, target_os = "windows"))'.dependencies]
-windows = { version = "0.43.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi"] }
+windows = { version = "0.43", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Console"] }
 
 
