--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,13 +20,17 @@ env_logger = "0.10"
 device_query = "1"
 either = { version = "1", features = ["serde"] }
 rust-embed = { version = "6.4", features = ["include-exclude"] }
+getset = "0.1"
+strum_macros = "0.24"
+strum = {version = "0.24", features = ["derive"] }
 
 
 [target.'cfg(all(unix, target_os = "linux"))'.dependencies]
 x11rb = { version = "0.11", features = ["xinerama", "randr"]}
+gilrs = { version = "0.10", default_features = false, features = ["serde-serialize", "wgi"] }
 
 
 [target.'cfg(all(windows, target_os = "windows"))'.dependencies]
 windows = { version = "0.43", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Console"] }
-
+gilrs = { version = "0.10", default_features = false, features = ["serde-serialize", "xinput"] }
 
