--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ derive_more = "0.99"
 serde = { version = "1", features = ["derive"] }
 thiserror = "1.0.37"
 clap = { version = "4", features = ["derive", "cargo"] }
-sfml = {git="https://github.com/donicrosby/rust-sfml.git", branch="static-build", features=["serde"]}
+sfml = { git="https://github.com/donicrosby/rust-sfml.git", branch="static-build", features=["serde"] }
 log = "0.4"
 cfg-if = "1"
 dyn-clone = "1"
@@ -22,8 +22,9 @@ either = { version = "1", features = ["serde"] }
 rust-embed = { version = "6.4", features = ["include-exclude"] }
 getset = "0.1"
 strum_macros = "0.24"
-strum = {version = "0.24", features = ["derive"] }
-
+strum = { version = "0.24", features = ["derive"] }
+bevy = { version = "0.9.1" }
+bevy_common_assets = { version = "0.4", features = ["toml"]}
 
 [target.'cfg(all(unix, target_os = "linux"))'.dependencies]
 x11rb = { version = "0.11", features = ["xinerama", "randr"]}
@@ -34,3 +35,8 @@ gilrs = { version = "0.10", default_features = false, features = ["serde-seriali
 windows = { version = "0.43", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Console"] }
 gilrs = { version = "0.10", default_features = false, features = ["serde-serialize", "xinput"] }
 
+[profile.dev.package."*"]
+opt-level = 3
+
+[profile.dev]
+opt-level = 1
